syntax = "proto3";

package indexer.v1;

option go_package = "github.com/mvp-joe/project-cortex/gen/indexer/v1;indexerv1";

// IndexerService manages the indexing daemon and project indexing operations.
//
// Architecture:
// - Single daemon process manages multiple projects
// - Each project runs in its own actor with git and file watching
// - Projects share daemon resources (embedding server, cache directory)
//
// Lifecycle:
// 1. Client calls Index() to register project and start watching
// 2. Daemon creates actor, starts git/file watchers, performs initial index
// 3. Actor continuously monitors for changes and incrementally reindexes
// 4. Client calls GetStatus() or StreamLogs() to monitor progress
// 5. Client calls UnregisterProject() to stop watching (optional cache cleanup)
// 6. Client calls Shutdown() to gracefully stop daemon
//
// All RPCs served over Unix domain socket (default: ~/.cortex/indexer.sock).
service IndexerService {
  // Index triggers indexing for a project and streams progress updates.
  //
  // Behavior:
  // - If project not registered: Registers project, creates actor, starts initial indexing
  // - If project already registered: Returns current status immediately (no-op)
  // - Stream completes when initial indexing finishes
  // - After initial index, actor transitions to watching mode (git + file watchers)
  //
  // Progress updates:
  // - PHASE_DISCOVERING: Scanning project for files to index
  // - PHASE_INDEXING: Parsing and chunking code/docs
  // - PHASE_EMBEDDING: Generating embeddings via embedding server
  // - PHASE_COMPLETE: Initial indexing done, transitioning to watch mode
  //
  // Error conditions:
  // - Invalid project path (not a directory)
  // - Not a git repository
  // - Embedding server unavailable
  rpc Index(IndexRequest) returns (stream IndexProgress);

  // GetStatus returns the daemon status and all watched projects.
  //
  // Provides:
  // - Daemon process info (PID, uptime, socket path)
  // - All registered projects with indexing statistics
  // - Current indexing phase (if actively indexing)
  //
  // Use cases:
  // - Health checks
  // - Dashboard/UI data
  // - Debugging project state
  rpc GetStatus(StatusRequest) returns (StatusResponse);

  // StreamLogs streams log entries for one or all projects.
  //
  // Filtering:
  // - If project_path empty: Stream logs from all projects
  // - If project_path set: Only logs for that project
  //
  // Follow mode:
  // - If follow=false: Stream existing logs, then close
  // - If follow=true: Stream existing logs, keep connection open for new logs (tail -f behavior)
  //
  // Use cases:
  // - Real-time monitoring
  // - Debugging indexing issues
  // - Audit trail
  rpc StreamLogs(LogsRequest) returns (stream LogEntry);

  // UnregisterProject stops watching a project and optionally removes its cache.
  //
  // Behavior:
  // - Stops project actor (git watcher + file watcher)
  // - Removes project from daemon registry
  // - If remove_cache=true: Deletes .cortex/cache/<cache-key>/
  // - If remove_cache=false: Preserves cache for future re-registration
  //
  // Error conditions:
  // - Project not registered (returns success with message)
  // - Cache removal fails (returns error with details)
  rpc UnregisterProject(UnregisterRequest) returns (UnregisterResponse);

  // Shutdown gracefully stops the daemon.
  //
  // Shutdown sequence:
  // 1. Stop accepting new Index() requests
  // 2. Wait for in-progress indexing to complete (or timeout after 30s)
  // 3. Stop all project actors
  // 4. Close embedding server connection
  // 5. Remove Unix socket
  // 6. Exit daemon process
  //
  // Returns after shutdown is complete.
  // Client receives response before daemon exits.
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
}

// IndexRequest specifies the project to index.
message IndexRequest {
  // Absolute path to the project root.
  // Must be a valid directory containing a .git/ directory.
  //
  // Example: "/Users/joe/code/my-project"
  string project_path = 1;
}

// IndexProgress represents a progress update during indexing.
message IndexProgress {
  // Indexing phase enumeration.
  enum Phase {
    // Unspecified phase (should not occur in valid responses).
    PHASE_UNSPECIFIED = 0;

    // Discovering files to index (walking directory tree, applying ignore rules).
    PHASE_DISCOVERING = 1;

    // Parsing and chunking files (tree-sitter parsing, chunking logic).
    PHASE_INDEXING = 2;

    // Generating embeddings (sending chunks to embedding server).
    PHASE_EMBEDDING = 3;

    // Indexing complete, transitioning to watch mode.
    PHASE_COMPLETE = 4;
  }

  // Current indexing phase.
  Phase phase = 1;

  // Total number of files discovered to index.
  // Set during PHASE_DISCOVERING, stable afterward.
  int32 files_total = 2;

  // Number of files processed so far.
  // Increments during PHASE_INDEXING and PHASE_EMBEDDING.
  int32 files_processed = 3;

  // Total chunks generated across all files.
  // Increments during PHASE_INDEXING.
  int32 chunks_generated = 4;

  // File currently being processed (optional).
  // Relative path from project root.
  // Empty if not processing specific file (e.g., during PHASE_DISCOVERING).
  //
  // Example: "internal/indexer/parser.go"
  string current_file = 5;

  // Human-readable status message for display to user.
  //
  // Examples:
  //   "Discovering files..."
  //   "Indexing internal/indexer/parser.go (253/1024)"
  //   "Generating embeddings (batch 5/12)..."
  //   "Indexing complete. Watching for changes."
  string message = 6;
}

// StatusRequest has no parameters (queries all daemon state).
message StatusRequest {}

// StatusResponse contains daemon and project status.
message StatusResponse {
  // Daemon process information.
  DaemonStatus daemon = 1;

  // All registered projects.
  // Sorted by registration time (oldest first).
  repeated ProjectStatus projects = 2;
}

// DaemonStatus describes the indexer daemon state.
message DaemonStatus {
  // Process ID of the daemon.
  int32 pid = 1;

  // Unix timestamp when daemon started (seconds since epoch).
  int64 started_at = 2;

  // Seconds since daemon startup.
  int64 uptime_seconds = 3;

  // Unix socket path where daemon is listening.
  //
  // Example: "/Users/joe/.cortex/indexer.sock"
  string socket_path = 4;
}

// ProjectStatus describes a single project's indexing state.
message ProjectStatus {
  // Absolute project path.
  string path = 1;

  // Cache key used for this project.
  // Format: "<remote-hash>-<worktree-hash>"
  //
  // Example: "a3f8b2c-d9e1f4a"
  string cache_key = 2;

  // Active git branch name.
  //
  // Example: "main", "feature/new-api"
  string current_branch = 3;

  // Total files indexed in current branch database.
  int32 files_indexed = 4;

  // Total chunks stored in current branch database.
  int32 chunks_count = 5;

  // Unix timestamp when project was registered (seconds since epoch).
  int64 registered_at = 6;

  // Unix timestamp of last indexing operation (seconds since epoch).
  // Updated on initial index and every incremental reindex.
  int64 last_indexed_at = 7;

  // True if project is actively indexing.
  // False if idle (in watch mode).
  bool is_indexing = 8;

  // Current indexing phase (only valid if is_indexing=true).
  // PHASE_UNSPECIFIED if is_indexing=false.
  IndexProgress.Phase current_phase = 9;
}

// LogsRequest specifies which logs to stream.
message LogsRequest {
  // Project path filter. Empty = all projects.
  // If set, only logs from matching project are streamed.
  //
  // Example: "/Users/joe/code/my-project"
  string project_path = 1;

  // If true, stream remains open for new logs (tail -f behavior).
  // If false, stream existing logs then close.
  bool follow = 2;
}

// LogEntry represents a single log line.
message LogEntry {
  // Unix timestamp in milliseconds (for high-precision sorting).
  int64 timestamp = 1;

  // Project path that generated the log.
  // Allows filtering in multi-project views.
  string project = 2;

  // Log level.
  // Values: "DEBUG", "INFO", "WARN", "ERROR"
  string level = 3;

  // Log message content.
  //
  // Examples:
  //   "Started indexing project"
  //   "Git branch switched: main -> feature/api"
  //   "File modified: internal/indexer/parser.go"
  //   "Error generating embeddings: connection refused"
  string message = 4;
}

// UnregisterRequest specifies the project to unregister.
message UnregisterRequest {
  // Absolute path to the project to unregister.
  string project_path = 1;

  // If true, delete cache directory for this project.
  // If false, preserve cache (allows fast re-registration).
  bool remove_cache = 2;
}

// UnregisterResponse confirms unregistration.
message UnregisterResponse {
  // True if unregistration succeeded.
  // False if error occurred (see message for details).
  bool success = 1;

  // Human-readable status message.
  //
  // Success examples:
  //   "Project unregistered successfully"
  //   "Project not registered (already removed)"
  //
  // Error examples:
  //   "Failed to remove cache: permission denied"
  string message = 2;
}

// ShutdownRequest has no parameters.
message ShutdownRequest {}

// ShutdownResponse confirms shutdown.
message ShutdownResponse {
  // True if shutdown initiated successfully.
  // False if error occurred (unlikely - daemon exits anyway).
  bool success = 1;

  // Human-readable status message.
  //
  // Example: "Daemon stopped gracefully"
  string message = 2;
}
